--- a/http-log/README.adoc
+++ b/http-log/README.adoc
@@ -1,7 +1,8 @@
-= http-log
+= HTTP with vanilla JAX-RS or with Camel `platform-http` component: A Camel Quarkus example
+:cq-example-description: An example that shows how to create HTTP endpoints using either the RESTEasy
+implementation of JAX-RS or using Camel `platform-http` component.
 
-This is a basic hello world example that uses CDI and JAX-RS to setup
-a Quarkus REST service and a Camel route to service HTTP traffic.
+{cq-description}
 
 The Quarkus REST service `ExampleResource.java` and the Camel route `CamelRoute.java`
 are independent and are present in this example to demonstrate how you can build microservices
