--- a/timer-log-cdi/README.adoc
+++ b/timer-log-cdi/README.adoc
@@ -1,8 +1,7 @@
-= timer-log-cdi
+= Configure a Camel component using CDI: A Camel Quarkus example
+:cq-example-description: An example that demonstrates how to set-up a Camel component (the `log` component in this case) programmatically using CDI
 
-This is a basic hello world example that uses CDI to set-up
-a Camel timer that triggers every second and prints to the
-log.
+{cq-description}
 
 TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Camel Quarkus User guide] for prerequisites
 and other general information.
