--- a/timer-log-kotlin/README.adoc
+++ b/timer-log-kotlin/README.adoc
@@ -1,26 +1,16 @@
-= Custom `main()`: A Camel Quarkus example
-:cq-example-description: An example that shows how to start Camel from a custom `main()` method
+= Kotlin Hello World: A Camel Quarkus example
+:cq-example-description: An example that shows how to define Camel routes using Kotlin programming language
 
 {cq-description}
-
-A custom `main()` method may be useful if you need to implement some custom logic that needs to be executed before
-starting the Camel context. In this example we do some processing of the command line parameters.
-
-TIP: IDEs typically allow for starting `main()` methods directly from an open editor. This may come in handy when
-developing.
 
 TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Camel Quarkus User guide] for prerequisites
 and other general information.
 
 == Start in the Development mode
 
-The `main()` method implemented in the `org.acme.timer.Main` requires two arguments: a greeting and a number how
-many times should the greeting be printed in the log. So we need to pass these two via `-Dquarkus.args` so that the
-dev mode does not start with an error:
-
 [source,shell]
 ----
-$ mvn clean compile quarkus:dev -Dquarkus.args='Hello 2'
+$ mvn clean compile quarkus:dev
 ----
 
 The above command compiles the project, starts the application and lets the Quarkus tooling watch for changes in your
@@ -30,9 +20,7 @@ TIP: Please refer to the Development mode section of
 https://camel.apache.org/camel-quarkus/latest/first-steps.html#_development_mode[Camel Quarkus User guide] for more details.
 
 Then look at the log output in the console. As we run the example in Quarkus Dev Mode, you can edit the source code and have live updates.
-For example try to change `greeting = args[i++];` to `greeting = args[i++] + "!!!";` in the `main()`
-method and you should see the application being recompiled, restarted and the greeting with three exclamation marks
-should appear in the console.
+For example try to change `Incremented the counter` to `Counter state` in the message body or change the property `timer.period` in application.properties
 
 === Package and run the application
 
@@ -46,11 +34,9 @@ https://camel.apache.org/camel-quarkus/latest/first-steps.html#_package_and_run_
 [source,shell]
 ----
 $ mvn clean package
-$ java -jar target/*-runner.jar Hello 2
+$ java -jar target/*-runner.jar
 ...
-[example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
-[example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
-...
+[io.quarkus] (main) camel-quarkus-examples-... started in 1.163s.
 ----
 
 ==== Native mode
@@ -63,9 +49,8 @@ To prepare a native executable using GraalVM, run the following command:
 [source,shell]
 ----
 $ mvn clean package -Pnative
-$ ./target/*-runner Hello 2
+$ ./target/*-runner
 ...
-[example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
-[example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
+[io.quarkus] (main) camel-quarkus-examples-... started in 0.013s.
 ...
 ----
