--- a/timer-log-xml/README.adoc
+++ b/timer-log-xml/README.adoc
@@ -1,8 +1,7 @@
-= timer-log-xml
+= XML Hello World: A Camel Quarkus example
+:cq-example-description: An example that shows how to define Camel routes using XML.
 
-This is a basic hello world example that uses XML to set-up
-a Camel timer that triggers every second and prints to the
-log.
+{cq-description}
 
 TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Camel Quarkus User guide] for prerequisites
 and other general information.
