--- a/observability/README.adoc
+++ b/observability/README.adoc
@@ -110,3 +110,7 @@ $ ./target/*-runner
 [io.quarkus] (main) camel-quarkus-examples-... started in 0.013s. Listening on: http://0.0.0.0:8080
 ...
 ----
+
+== Feedback
+
+Please report bugs and propose improvements via https://github.com/apache/camel-quarkus/issues[GitHub issues of Camel Quarkus] project.
