CAMEL-15948: use examples.json
Instead of generating `.adoc` files this generates `examples.json` in
attachments family of the camel-quarkus-examples documentation
component. The `examples.json` was generated using SNAPSHOT version of
`cq-maven-plugin` with changes in
https://github.com/l2x6/cq-maven-plugin/pull/7

--- a/timer-log/README.adoc
+++ b/timer-log/README.adoc
@@ -1,5 +1,5 @@
 = Timer Hello World: A Camel Quarkus example
-:cq-example-description: An example using the Camel timer component to output a Hello world message to the console
+:cq-example-description: An example that uses the Camel timer component to output a Hello world message to the console
 
 {cq-description}
 
