Adjust references to the runner JAR for the fast-jar format

--- a/health/README.adoc
+++ b/health/README.adoc
@@ -46,7 +46,7 @@ https://camel.apache.org/camel-quarkus/latest/first-steps.html#_package_and_run_
 ----
 
 $ mvn clean package
-$ java -jar target/*-runner.jar
+$ java -jar target/quarkus-app/quarkus-run.jar
 ...
 [io.quarkus] (main) camel-quarkus-examples-... started in 0.885s. Listening on: http://0.0.0.0:8080
 ----
