--- a/timer-log-main/README.adoc
+++ b/timer-log-main/README.adoc
@@ -46,7 +46,7 @@ https://camel.apache.org/camel-quarkus/latest/first-steps.html#_package_and_run_
 [source,shell]
 ----
 $ mvn clean package
-$ java -jar target/*-runner.jar Hello 2
+$ java -jar target/quarkus-app/quarkus-run.jar Hello 2
 ...
 [example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
 [example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
