--- a/observability/README.adoc
+++ b/observability/README.adoc
@@ -53,7 +53,7 @@ $ curl -s localhost:8080/health/live
 $ curl -s localhost:8080/health/ready
 ----
 
-The JSON output will contain a check named 'camel' for verifying whether the `CamelContext` is in the 'Started' state and another check to verify whether each individual route is in the 'Started' state.
+The JSON output will contain a checks for verifying whether the `CamelContext` and each individual route is in the 'Started' state.
 
 This example project contains a custom liveness check class `CustomLivenessCheck` and custom readiness check class `CustomReadinessCheck` which leverage the Camel health API.
 You'll see these listed in the health JSON as 'custom-liveness-check' and 'custom-readiness-check'. On every 5th invocation of these checks, the health status of `custom-liveness-check` will be reported as DOWN.
