--- a/health/README.adoc
+++ b/health/README.adoc
@@ -8,7 +8,7 @@ TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Ca
 and other general information.
 
 The example has two routes. The timer route performs a given task at regular interval. For the sake of this example we'll say
-that this task unexpectedly freezes the service from time to time. The details can be consulted at http://localhost:8080/health.
+that this task unexpectedly freezes the service from time to time. The details can be consulted at http://localhost:8080/q/health.
 The custom health check is expected to report UNKNOWN on first consultation, then UP during 10 seconds, and finally DOWN so as to
 simulate that the service is frozen.
 
@@ -16,7 +16,7 @@ The 2nd route is on purpose made to fail on startup by configuring netty to an u
 Camel supervising route controller will attempt to restart the route up till 10 times before exhausting.
 The routes health check will therefore report this route as DOWN until its exhausted where the states are changed to UNKNOWN.
 
-The details can be seen at runtime via the following url from a web browser: http://localhost:8080/health.
+The details can be seen at runtime via the following url from a web browser: http://localhost:8080/q/health.
 
 === Start in the Development mode
 
@@ -31,7 +31,7 @@ workspace. Any modifications in your project will automatically take effect in t
 TIP: Please refer to the Development mode section of
 https://camel.apache.org/camel-quarkus/latest/first-steps.html#_development_mode[Camel Quarkus User guide] for more details.
 
-You can check the health check status by calling the following url from a web browser: http://localhost:8080/health
+You can check the health check status by calling the following url from a web browser: http://localhost:8080/q/health
 
 === Package and run the application
 
