--- a/aws-lambda/README.adoc
+++ b/aws-lambda/README.adoc
@@ -1,4 +1,9 @@
-# Deploying a Camel Route in AWS Lambda : A Camel Quarkus example
+= Deploying a Camel Route in AWS Lambda : A Camel Quarkus example
+:cq-example-description: An example that shows how to deploy a Camel Quarkus route as an AWS Lambda function
+
+{cq-description}
+
+== Introduction
 
 This example uses the following framework 
 
@@ -12,43 +17,48 @@ If you want to learn more about
 * *Apache Camel - please visit its website: https://camel.apache.org/*
 * *AWS Lambda - please visit its website: https://aws.amazon.com/lambda/*
 
-## Provided Code
+== Provided Code
 
-### Quarkus Camel Amazon Lambda Integration example
+=== Quarkus Camel Amazon Lambda Integration example
 
 This example contains a sample Greeter service build using Quarkus & Camel framework implementing Dependency Injection design principle which can be deployed as functions into the Amazon Lambda.
 
-> :warning: **INCOMPATIBLE WITH DEV MODE**: Amazon Lambda Binding is not compatible with dev mode yet!
+[WARNING]
+====
+*INCOMPATIBLE WITH DEV MODE*: Amazon Lambda Binding is not compatible with dev mode yet!
+====
 
+==== Quarkus Extensions / Dependencies Used
 
-#### Quarkus Extensions / Dependencies Used
-
-1. **[Apache Camel](https://quarkus.io/guides/camel)**
-    * [camel-quarkus-core](https://camel.apache.org/camel-quarkus/latest/reference/extensions/core.html)
-    * [camel-quarkus-direct](https://camel.apache.org/camel-quarkus/latest/reference/extensions/direct.html)
-    * [camel-quarkus-log](https://camel.apache.org/camel-quarkus/latest/reference/extensions/log.html)
+1. **https://quarkus.io/guides/camel[Apache Camel]**
+    * https://camel.apache.org/camel-quarkus/latest/reference/extensions/core.html[camel-quarkus-core]
+    * https://camel.apache.org/camel-quarkus/latest/reference/extensions/direct.html[camel-quarkus-direct]
+    * https://camel.apache.org/camel-quarkus/latest/reference/extensions/log.html[camel-quarkus-log]
 
 2. **Amazon Lambda**
-    * [quarkus-amazon-lambda](https://quarkus.io/guides/amazon-lambda)
+    * https://quarkus.io/guides/amazon-lambda[quarkus-amazon-lambda]
     
-3. **[Context Dependency Injection](https://quarkus.io/guides/cdi)**
-    * [quarkus-arc](https://quarkus.io/guides/cdi-reference)
+3. **https://quarkus.io/guides/cdi[Context Dependency Injection]**
+    * https://quarkus.io/guides/cdi-reference[quarkus-arc]
     
-4. **[Testing](https://quarkus.io/guides/getting-started-testing)**
+4. **https://quarkus.io/guides/getting-started-testing[Testing]**
     * quarkus-junit5
-    * [quarkus-junit5-mockito](https://quarkus.io/blog/mocking/)
+    * https://quarkus.io/blog/mocking/[quarkus-junit5-mockito]
     * quarkus-test-amazon-lambda
 
-## Running the application in dev mode
+== Running the application in dev mode
 
 You can run your application in dev mode that enables live coding using:
 ```shell script
 mvn compile quarkus:dev
 ```
 
-> **_NOTE:_**  Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
+[NOTE]
+====
+Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
+====
 
-## Building and Packaging the Java code as Quarkus JVM application
+== Building and Packaging the Java code as Quarkus JVM jar
 
 The application can be packaged using:
 ```shell script
@@ -68,17 +78,25 @@ The application is now runnable using `java -jar target/quarkus-app/quarkus-run.
 
 It also generates a zip file `target/function.zip`. This zip file contains your java code along with the dependencies.
 
-<a name="native"> </a>
-
-## Building and Packaging the Java code as Quarkus Native executable
+[#package_native_executable]
+== Building and Packaging the Java code as Quarkus Native executable
 
 If you want a lower memory footprint and faster initialization times for your lambda, you can compile your Java code to a native executable. Just make sure to rebuild your project with the -Pnative switch.
-> :warning: **Building Native Executables will take much longer time and depends on the underlying system**
+
+[WARNING]
+====
+*Building Native Executables will take much longer time and depends on the underlying system*
+====
+
 ```shell script
 mvn package -Pnative
 ```
-> :information_source: If you are building on a non-Linux system Or, if you don't have GraalVM installed, you can run the native executable build using docker container. You need to pass in a property instructing quarkus to use a docker build as Amazon Lambda requires linux binaries. 
+
+[NOTE]
+====
+If you are building on a non-Linux system Or, if you don't have GraalVM installed, you can run the native executable build using docker container. You need to pass in a property instructing quarkus to use a docker build as Amazon Lambda requires linux binaries. 
 >You can do this by passing this property to your Maven build: `-Dquarkus.native.container-build=true`. However, This requires to have docker installed locally.
+====
 
 ```shell script
 mvn package -Pnative -Dquarkus.native.container-build=true
@@ -91,8 +109,11 @@ It also generates a zip file `target/function.zip`. This zip file contains your 
 
 If you want to learn more about building native executables, please consult https://quarkus.io/guides/maven-tooling.html.
 
-## Extra Build Generated Files
- **_NOTE:_** After you run the build, there are a few extra files generated by the quarkus-amazon-lambda extension. These files are in the build directory: `target/`
+== Extra Build Generated Files
+[NOTE]
+====
+After you run the build, there are a few extra files generated by the quarkus-amazon-lambda extension. These files are in the build directory: `target/`
+====
 
 * function.zip - lambda deployment file
 
@@ -104,9 +125,12 @@ If you want to learn more about building native executables, please consult http
 
 * sam.native.yaml - (optional) for use with sam cli and native local testing
 
-> :information_source: [Please click here to know more on how to use these scripts for automated deployment](https://quarkus.io/guides/amazon-lambda#extra-build-generated-files)
+[NOTE]
+====
+https://quarkus.io/guides/amazon-lambda#extra-build-generated-files[Please click here to know more on how to use these scripts for automated deployment]
+====
 
-## Deploying the Quarkus JVM application to AWS Lambda via AWS Web Console
+== Deploying the Quarkus JVM application to AWS Lambda via AWS Web Console
 
 1. Go to AWS Web console and search for Lambda Service
  
@@ -132,23 +156,24 @@ If you want to learn more about building native executables, please consult http
 io.quarkus.amazon.lambda.runtime.QuarkusStreamHandler::handleRequest
 ```
 
-### Testing the AWS Lamda Function
+=== Testing the AWS Lamda Function
 
 1. Now select the Test tab for executing a quick test. Copy paste the below json payload and hit Test 
 
-    ```shell script
     {
      "name": "Ravishankar"
     }
-    ```
+
 2. If everything goes fine you should get the below response along with the lambda execution logs & stats
 
-    ```shell script
     Hello Ravishankar ! How are you? from GreetService
-    ```
-## Deploying the Quarkus Native executable to AWS Lambda via AWS Web Console
 
-**_NOTE:_** [Please ensure that you have built your Java code as Quarkus Native executable](#native)
+== Deploying the Quarkus Native executable to AWS Lambda via AWS Web Console
+
+[NOTE]
+====
+<<package_native_executable,Please ensure that you have built your Java code as Quarkus Native executable>>
+====
 
 1. Go to AWS Web console and search for Lambda Service
  
@@ -170,28 +195,25 @@ io.quarkus.amazon.lambda.runtime.QuarkusStreamHandler::handleRequest
 
 10. For the Handler details please provide the below Handler 
 
-    ```shell script
         not.used.in.provided.runtime
-    ```
 
 11. Then Select the Configuration tab and click Environment Variables 
 
 12. For Key enter `DISABLE_SIGNAL_HANDLERS`	& for Value enter `true`
 
-### Testing the AWS Lamda Function
+=== Testing the AWS Lamda Function
 
 1. Now select the Test tab for executing a quick test. Copy paste the below json payload and hit Test 
 
-    ```shell script
     {
      "name": "Ravishankar"
     }
-    ```
+
 2. If everything goes fine you should get the below response along with the lambda execution logs & stats
 
-    ```shell script
-    Hello Ravishankar ! How are you? from GreetService
-    ```
 
-## JVM vs Native : Results based on lambda execution logs & stats
-![JVM vs Native Results](results.png?raw=true "JVM vs Native Results")
+    Hello Ravishankar ! How are you? from GreetService
+
+
+== JVM vs Native : Results based on lambda execution logs & stats
+image::results.png[JVM vs Native Results]
