Removing JPA and fixing docs

--- a/jdbc-datasource/README.adoc
+++ b/jdbc-datasource/README.adoc
@@ -1,5 +1,5 @@
 = Connecting to a JDBC DataSource: A Camel Quarkus example
-:cq-example-description: An example that shows how to define a Camel route in XML for tokenizing a CSV a file.
+:cq-example-description: An example that shows how to connect to a Database using Datastores.
 
 {cq-description}
 
@@ -29,10 +29,6 @@ workspace. Any modifications in your project will automatically take effect in t
 
 TIP: Please refer to the Development mode section of
 https://camel.apache.org/camel-quarkus/latest/first-steps.html#_development_mode[Camel Quarkus User guide] for more details.
-
-Once the application has started it will wait 5 seconds and then read the file every 30 seconds. By default the row split
-is sequential however you can edit the properties file and set the parallel processing to true. The output should then be
-a little more out of order i.e. non-sequential processing of rows.
 
 === Package and run the application
 
